<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8EAC6"
    tools:context=".Customer_package.customerInputActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="414dp"
        android:layout_height="0dp"
        android:layout_marginTop="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <TextView
                android:id="@+id/other_textView5"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginTop="24dp"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/similarTopicName_describe" />

            <TextView
                android:id="@+id/similarTopicName"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:background="#F8F1DE"
                android:ellipsize="none"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/link_textView"
                app:layout_constraintTop_toBottomOf="@+id/other_textView" />

            <TextView
                android:id="@+id/similarTopicName_describe"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="#F8F1DE"
                android:ellipsize="none"
                android:textAlignment="center"
                android:maxLines="2"
                android:scrollHorizontally="false"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/link_textView"
                app:layout_constraintTop_toBottomOf="@+id/similarTopicName" />

            <TextView
                android:id="@+id/space"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:background="#F8F1DE"
                android:ellipsize="none"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/link_textView"
                app:layout_constraintTop_toBottomOf="@+id/link_textView" />

            <TextView
                android:id="@+id/final_textView"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:background="#F8F1DE"
                android:text="@string/finalDue"
                android:textAlignment="center"
                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/noti_textView"
                app:layout_constraintTop_toTopOf="@+id/noti_textView" />

            <TextView
                android:id="@+id/article_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="#F8F1DE"
                android:ellipsize="none"
                android:text="article"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/link_textView"
                app:layout_constraintTop_toBottomOf="@+id/space" />

            <TextView
                android:id="@+id/title_textView"
                android:layout_width="412dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:background="#F8F4E9"
                android:text="title"
                android:textAlignment="center"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/link_textView"
                android:layout_width="414dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="link"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/section_textView2" />

            <TextView
                android:id="@+id/noti_textView"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="40dp"
                android:background="#F8F1DE"
                android:text="@string/notificationDue"
                android:textAlignment="center"
                android:textSize="20dp"
                app:layout_constraintStart_toStartOf="@+id/title_textView"
                app:layout_constraintTop_toBottomOf="@+id/title_textView" />

            <TextView
                android:id="@+id/section_textView2"
                android:layout_width="240dp"
                android:layout_height="40dp"
                android:background="#F8F1DE"
                android:gravity="center"
                android:text="@string/submission"
                android:textSize="20dp"
                app:layout_constraintStart_toStartOf="@+id/notiDate"
                app:layout_constraintTop_toBottomOf="@+id/notiDate" />

            <TextView
                android:id="@+id/finalDate"
                android:layout_width="0dp"
                android:layout_height="37dp"
                android:text="TextView"
                android:textAlignment="center"
                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="@+id/final_textView"
                app:layout_constraintStart_toEndOf="@+id/notiDate"
                app:layout_constraintTop_toBottomOf="@+id/final_textView" />

            <TextView
                android:id="@+id/notiDate"
                android:layout_width="200dp"
                android:layout_height="37dp"
                android:text="TextView"
                android:textAlignment="center"
                android:textSize="20dp"
                app:layout_constraintStart_toStartOf="@+id/noti_textView"
                app:layout_constraintTop_toBottomOf="@+id/noti_textView" />

            <TextView
                android:id="@+id/other_textView"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:text="@string/similar"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/article_textView" />

            <TextView
                android:id="@+id/SD_Date"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="20120531"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/section_textView2"
                app:layout_constraintTop_toBottomOf="@+id/finalDate" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/back_imgBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="#F8F4E9"
        android:onClick="return_btn"
        android:src="@android:drawable/ic_menu_revert"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>